--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "concurrently --kill-others \"less-watch-compiler src/less src/css \" \"react-scripts start\"",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
@@ -38,7 +38,10 @@
 		]
 	},
 	"devDependencies": {
+		"concurrently": "^6.2.0",
 		"gh-pages": "^3.2.0",
+		"less": "^4.1.1",
+		"less-watch-compiler": "^1.15.2",
 		"react-router-dom": "^5.2.0"
 	}
 }
