migrating to a different domain :door:

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://owenmoogk.github.io/github-profile/",
+	"homepage": "http://octoprofile.tk/",
 	"name": "github-card",
 	"version": "0.1.0",
 	"private": true,
