--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
 	"devDependencies": {
 		"@simbathesailor/use-what-changed": "^2.0.0",
 		"concurrently": "^6.2.0",
+		"download": "^8.0.0",
+		"downloadjs": "^1.4.7",
 		"gh-pages": "^3.2.0",
+		"html-to-image": "^1.6.2",
 		"less": "^4.1.1",
 		"less-watch-compiler": "^1.15.2",
 		"react-router-dom": "^5.2.0"
