--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"html-to-image": "^1.6.2",
 		"less": "^4.1.1",
 		"less-watch-compiler": "^1.15.2",
+		"react-github-corner": "^2.5.0",
 		"react-router-dom": "^5.2.0"
 	}
 }
