--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://octoprofile.tk/",
+	"homepage": "https://owenmoogk.github.io/github-profile/",
 	"name": "github-card",
 	"version": "0.1.0",
 	"private": true,
@@ -10,7 +10,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-minimal-pie-chart": "^8.2.0",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^4.0.3",
 		"recharts": "^2.0.9",
 		"web-vitals": "^1.1.2"
 	},
