--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
 	"homepage": "https://owenmoogk.github.io/github-profile/",
-	"name": "github-card",
+	"name": "github-profile",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.12.0",
-		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-minimal-pie-chart": "^8.2.0",
-		"react-scripts": "^4.0.3",
-		"recharts": "^2.0.9",
-		"web-vitals": "^1.1.2"
+		"@testing-library/jest-dom": "^6.1.5",
+		"@testing-library/react": "^14.1.2",
+		"@testing-library/user-event": "^14.5.1",
+		"npm-check-updates": "^16.14.12",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-minimal-pie-chart": "^8.4.0",
+		"react-scripts": "^5.0.1",
+		"recharts": "^2.10.3",
+		"web-vitals": "^3.5.0"
 	},
 	"scripts": {
 		"start": "concurrently --kill-others \"less-watch-compiler src/less src/css \" \"react-scripts start\"",
@@ -42,14 +43,14 @@
 	},
 	"devDependencies": {
 		"@simbathesailor/use-what-changed": "^2.0.0",
-		"concurrently": "^6.2.0",
+		"concurrently": "^8.2.2",
 		"download": "^8.0.0",
 		"downloadjs": "^1.4.7",
-		"gh-pages": "^3.2.0",
-		"html-to-image": "^1.6.2",
-		"less": "^4.1.1",
-		"less-watch-compiler": "^1.15.2",
+		"gh-pages": "^6.1.0",
+		"html-to-image": "^1.11.11",
+		"less": "^4.2.0",
+		"less-watch-compiler": "^1.16.3",
 		"react-github-corner": "^2.5.0",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^6.21.0"
 	}
 }
